coverage in non simulation environment

--- a/README
+++ b/README
@@ -13,3 +13,5 @@ to run all
 to start server (defaults to localhost:8080)
 
 % www/report
+
+See test/coverage.readme for information on running multiple test runs with coverage in non simulation environment.
